<resources>
   <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
   <string name="facebook_application_id" translatable="false">336321103929687</string>
   <string name="facebook_login_protocol_scheme" translatable="false">fb336321103929687</string>
   <!-- Twitter consumer key and secret -->
   <!--   <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>-->
   <!--   <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>-->

   <string name="app_name">Should I</string>

   <string name="take_picture_button">Should I?</string>
   <string name="nav_decide_button">Decide</string>
   <string name="nav_pictures_button">My Pictures</string>
   <string name="logout_button">LOG OUT</string>
   <string name="delete_button">DELETE</string>
   <string name="caption_upload_button">Upload</string>
   <string name="decide_no_button">NO</string>
   <string name="decide_yes_button">YES</string>
   <string name="nav_should_i_button">Should I?</string>

   <string name="decide_fragment_title">Should They?</string>
   <string name="take_picture_fragment_title">Should I?</string>
   <string name="auth_fragment_title">Should I?</string>
   <string name="my_pictures_fragment_title">Should You?</string>
   <string name="caption_title">Should I...</string>

   <string name="switch_camera_button_alt">Switch camera</string>
   <string name="capture_button_alt">Capture</string>
   <string name="no_pictures_to_vote">Check back later for new pics and post your own!</string>
   <string name="caption_hint">Type something</string>

   <string name="sample_caption">do this amazing thing?</string>
   <string name="sample_username">Username</string>
   <string name="anonymous_username">Anonymous User</string>
   <string name="sample_email">anonymous@example.com</string>
   <string name="profile_button">Profile</string>

   <string name="terms_of_service_url">https://docs.google.com/document/d/1OH9Kkyrh_SdRMTuvDug43wVu1JxcVHUm199uB4Q7akw/edit?usp=sharing</string>
   <string name="privacy_policy_url">https://docs.google.com/document/d/1uancL8V8Rps5MSN7Isi7c-JtWgaelMZddWuahZef_gM/edit?usp=sharing</string>
</resources>
