<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_outline_black_48dp" />

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sample_username"
        app:layout_constraintStart_toEndOf="@+id/profile_imageView"
        app:layout_constraintTop_toTopOf="@+id/profile_imageView"
        tools:text="@string/sample_username" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/profile_imageView"
        app:layout_constraintTop_toBottomOf="@+id/username_textView"
        tools:text="@string/sample_email" />

    <Button
        android:id="@+id/logout_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logout_button"
        android:textColor="#FFF"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_imageView"
        tools:text="@string/logout_button" />

    <Button
        android:id="@+id/delete_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_button"
        android:textColor="@color/no_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logout_button"
        app:layout_constraintTop_toBottomOf="@+id/profile_imageView"
        tools:text="@string/delete_button" />
</androidx.constraintlayout.widget.ConstraintLayout>

