<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.sadraii.shouldi.ui.Auth"
        android:label="@string/auth_fragment_title"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_decideFragment"
            app:destination="@id/decideFragment" />
    </fragment>
    <fragment
        android:id="@+id/decideFragment"
        android:name="com.sadraii.shouldi.ui.Decide"
        android:label="@string/decide_fragment_title"
        tools:layout="@layout/fragment_decide">
        <action
            android:id="@+id/action_decideFragment_to_permissionFragment"
            app:destination="@id/permissionFragment" />
        <action
            android:id="@+id/action_decideFragment_to_profileDialog"
            app:destination="@id/profileDialog" />
    </fragment>
    <fragment
        android:id="@+id/takePictureFragment"
        android:name="com.sadraii.shouldi.ui.TakePicture"
        android:label="@string/take_picture_fragment_title"
        tools:layout="@layout/fragment_take_picture">
        <action
            android:id="@+id/action_takePictureFragment_to_captionFragment"
            app:destination="@id/captionFragment" />
        <action
            android:id="@+id/action_takePictureFragment_to_permissionFragment"
            app:destination="@id/permissionFragment"
            app:popUpTo="@id/decideFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/captionFragment"
        android:name="com.sadraii.shouldi.ui.Caption"
        android:label="@string/take_picture_fragment_title"
        tools:layout="@layout/fragment_caption">
        <action
            android:id="@+id/action_captionFragment_to_myPicturesFragment"
            app:destination="@id/myPicturesFragment" />
        <argument
            android:name="picture"
            app:argType="android.graphics.Bitmap" />
    </fragment>
    <fragment
        android:id="@+id/myPicturesFragment"
        android:name="com.sadraii.shouldi.ui.Pictures"
        android:label="@string/my_pictures_fragment_title"
        tools:layout="@layout/fragment_pictures">
        <action
            android:id="@+id/action_myPicturesFragment_to_pictureDetailFragment"
            app:destination="@id/pictureDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/pictureDetailFragment"
        android:name="com.sadraii.shouldi.ui.PictureDetail"
        android:label="@string/my_pictures_fragment_title"
        tools:layout="@layout/fragment_picture_detail">
        <argument
            android:name="pictureEntity"
            app:argType="com.sadraii.shouldi.data.entity.PictureEntity" />
    </fragment>
    <fragment
        android:id="@+id/permissionFragment"
        android:name="com.sadraii.shouldi.ui.Permission"
        android:label="fragment_permission"
        tools:layout="@layout/fragment_permission">
        <action
            android:id="@+id/action_permissionFragment_to_takePictureFragment"
            app:destination="@id/takePictureFragment"
            app:popUpTo="@id/decideFragment" />
        <action
            android:id="@+id/action_permissionFragment_to_decideFragment"
            app:destination="@id/decideFragment"
            app:popUpTo="@id/decideFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <dialog
        android:id="@+id/profileDialog"
        android:name="com.sadraii.shouldi.ui.ProfileDialog"
        android:label="ProfileDialog"
        tools:layout="@layout/fragment_profile_dialog">
        <action
            android:id="@+id/action_profileDialog_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </dialog>
</navigation>