<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Decide">

    <androidx.cardview.widget.CardView
        android:id="@+id/picture_stack_1_cardView"
        style="@style/CardView.Light"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/card_bg_1"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/picture_stack_2_cardView"
        app:layout_constraintStart_toStartOf="@+id/picture_stack_2_cardView"
        app:layout_constraintTop_toBottomOf="@+id/stack_space" />

    <androidx.cardview.widget.CardView
        android:id="@+id/picture_stack_2_cardView"
        style="@style/CardView.Light"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/card_bg_2"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/picture_cardView"
        app:layout_constraintStart_toStartOf="@+id/picture_cardView"
        app:layout_constraintTop_toBottomOf="@+id/stack_space" />

    <Space
        android:id="@+id/stack_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/picture_cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/picture_cardView"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/picture_imageView"
                android:layout_width="0dp"
                android:layout_height="500dp"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/username_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:shadowColor="#000"
                android:shadowRadius="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/sample_username" />

            <ImageView
                android:id="@+id/report_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:alpha="@dimen/report_alpha"
                android:src="@drawable/ic_report_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/top_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:alpha="@dimen/caption_alpha"
                android:background="@drawable/rounded_bottom_corners"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/top_space" />

            <Space
                android:id="@+id/top_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/caption_title_textView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/caption_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/caption_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@id/caption_textView"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/caption_title" />

            <TextView
                android:id="@+id/caption_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/sample_caption" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/decide_no_fab"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:text="@string/decide_no_button"
        app:icon="@drawable/ic_no_vote_black_24dp"
        app:iconTint="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="@+id/picture_cardView"
        app:layout_constraintTop_toBottomOf="@+id/picture_cardView" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/decide_yes_fab"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:text="@string/decide_yes_button"
        app:icon="@drawable/ic_yes_vote_black_24dp"
        app:iconTint="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="@+id/picture_cardView"
        app:layout_constraintTop_toBottomOf="@+id/picture_cardView" />

    <TextView
        android:id="@+id/no_pictures_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/no_pictures_to_vote"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="#141414"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/no_pictures_to_vote" />

    <ImageView
        android:id="@+id/down_arrow_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_arrow_downward_black_24dp"
        android:tint="#141414"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



